--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -18,10 +18,10 @@
 	"isShellCommand": true,
 
 	// Show the output window only if unrecognized errors occur. 
-	"showOutput": "silent",
+	"showOutput": "always",
 	
 	// args is the HelloWorld program to compile.
-	"args": ["daccord.ts"],
+	"args": ["-p", "."], 
 	
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
